# CoRAG

./: READNE_By_LMX.md  tsconfig.json  每次代码修改文档复盘.md
RAGSDK-master/ops/: CMakeLists.txt  build.sh
RAGSDK-master/ops/adapter/: CMakeLists.txt
RAGSDK-master/ops/adapter/model/: model_torch.cpp  model_torch.h
RAGSDK-master/ops/adapter/operation/: operation_creator.cpp  operation_creator.h
RAGSDK-master/ops/adapter/utils/: utils.cpp  utils.h
RAGSDK-master/ops/adapter/workspace/: buffer_base.cpp  buffer_base.h  buffer_device.cpp  buffer_device.h  workspace.cpp  workspace.h
RAGSDK-master/ops/models/: CMakeLists.txt
RAGSDK-master/ops/models/bge-large-zh-v1.5/layer/: feed_forward.cpp  feed_forward.h  flash_attention_layer_base.cpp  flash_attention_layer_base.h
RAGSDK-master/ops/models/bge-large-zh-v1.5/model/: flash_attention_model.cpp  flash_attention_model.h
RAGSDK-master/ops/models/include/atb_speed/: log.h
RAGSDK-master/ops/models/include/atb_speed/base/: context_factory.h  hosttensor_binder.h  model.h  model_creator.h
RAGSDK-master/ops/models/include/atb_speed/log/: log_core.h  log_entity.h  log_sink.h  log_sink_file.h  log_sink_stdout.h  log_stream.h
RAGSDK-master/ops/models/include/atb_speed/utils/: config.h  filesystem.h  match.h  model_factory.h  operation_factory.h  operation_util.h  singleton.h  speed_probe.h  statistic.h  str_split.h  tensor_util.h  timer.h
RAGSDK-master/ops/models/src/base/: context_factory.cpp  model.cpp
RAGSDK-master/ops/models/src/log/: log_core.cpp  log_entity.cpp  log_sink.cpp  log_sink_file.cpp  log_sink_stdout.cpp  log_stream.cpp
RAGSDK-master/ops/models/src/utils/: config.cpp  filesystem.cpp  match.cpp  model_factory.cpp  operation_factory.cpp  speed_probe.cpp  statistic.cpp  str_split.cpp  tensor_util.cpp  timer.cpp
RAGSDK-master/ops/operations/: CMakeLists.txt
RAGSDK-master/ops/operations/plugin_op/: acl_nn_global_cache.cpp  acl_nn_global_cache.h  acl_nn_operation.cpp  acl_nn_operation.h  acl_nn_operation_cache.cpp  acl_nn_operation_cache.h  acl_nn_tensor.h  aclnn_addmm.cpp  aclnn_addmm.h  aclnn_gelu_operation.cpp  aclnn_gelu_operation.h  executor_manager.cpp  executor_manager.h  singleton.h  utils.cpp  utils.h
RAGSDK-master/ops/transformer_adapter/: __init__.py  common_adapater.py  file_check.py  modeling_bert_adapter.py  modeling_clip_adapter.py  modeling_roberta_adapter.py  modeling_xlm_roberta_adapter.py
(+283 files in other folders)
